apps/authentik-db/base/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: acid-cluster-dtrl
  namespace: authentik
spec:
  host: acid-cluster.authentik.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authentik-dtrl
  namespace: authentik
spec:
  host: authentik.authentik.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
